# documents-vector-search

./: .gitignore  LICENSE  README.md  collection_search_cmd_adapter.py  collection_search_mcp_stdio_adapter.py  collection_update_cmd_adapter.py  confluence_cloud_collection_create_cmd_adapter.py  confluence_collection_create_cmd_adapter.py  files_collection_create_cmd_adapter.py  jira_cloud_collection_create_cmd_adapter.py  jira_collection_create_cmd_adapter.py  pyproject.toml
main/core/: documents_collection_creator.py  documents_collection_searcher.py
main/factories/: create_collection_factory.py  search_collection_factory.py  update_collection_factory.py
main/indexes/: indexer_factory.py
main/indexes/embeddings/: ollama_embeder.py  sentence_embeder.py
main/indexes/indexers/: faiss_indexer.py  qdrant_indexer.py
main/persisters/: disk_persister.py
main/sources/: document_cache_reader_decorator.py
main/sources/confluence/: confluence_cloud_document_converter.py  confluence_cloud_document_reader.py  confluence_document_converter.py  confluence_document_reader.py
main/sources/files/: files_document_converter.py  files_document_reader.py
main/sources/jira/: jira_cloud_document_converter.py  jira_cloud_document_reader.py  jira_document_converter.py  jira_document_reader.py
main/utils/: batch.py  logger.py  performance.py  progress_bar.py  retry.py
